# shellBrowser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: dev.workflow.yml
includes/: shellBrowser.hpp  utils.hpp
includes/browser/: Browser.hpp
includes/error/: Error.hpp
includes/prompt/: IPrompt.hpp  NcursePrompt.hpp  Prompt.hpp
src/: main.cpp  shellBrowser.cpp
src/browser/: Browser.cpp
src/error/: Error.cpp
src/prompt/: NcursePrompt.cpp  Prompt.cpp
src/utils/: formatUrl.cpp  getRequest.cpp
tests/: test.cpp
tests/prompt/: prompt.test.cpp
